# medical_appointment_bot

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
