[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "medical_appointment_bot"
version = "0.0.1"
description = "An agent that talks to patients and books appointments for them"
authors = [
  { name = "mbkamran" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["medical_appointment_bot"]
include = ["pyproject.toml", "medical_appointment_bot/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["medical_appointment_bot"]
force-sort-within-sections = true

